--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 buildscript {
+    ext.kotlin_version = "1.6.10"
+
     repositories {
         jcenter()
         maven {
@@ -16,9 +18,11 @@ buildscript {
         classpath "com.github.asbyth:ForgeGradle:FG_2.1-SNAPSHOT"
         classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
         classpath "com.github.LXGaming:MixinGradle:0.6-SNAPSHOT"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
+apply plugin: 'kotlin'
 apply plugin: "net.minecraftforge.gradle.forge"
 apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: "org.spongepowered.mixin"
