--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    ext.kotlin_version = "1.6.10"
-
     repositories {
         jcenter()
         maven {
@@ -18,11 +16,10 @@ buildscript {
         classpath "com.github.asbyth:ForgeGradle:FG_2.1-SNAPSHOT"
         classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
         classpath "com.github.LXGaming:MixinGradle:0.6-SNAPSHOT"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
-apply plugin: 'kotlin'
+apply plugin: "groovy"
 apply plugin: "net.minecraftforge.gradle.forge"
 apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: "org.spongepowered.mixin"
@@ -79,6 +76,8 @@ dependencies {
 
     implementation "org.spongepowered:mixin:0.7.11-SNAPSHOT"
     annotationProcessor "org.spongepowered:mixin:0.7.11-SNAPSHOT"
+
+    implementation 'org.codehaus.groovy:groovy-all:3.0.9'
 }
 
 jar {
