Made gradle process mcmod.info properly. thx dj

--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,15 @@ shadowJar {
     )
 }
 
+processResources {
+    inputs.property "version", project.version
+    inputs.property "mcversion", project.minecraft.version
+
+    filesMatching('mcmod.info') {
+        expand 'version':project.version, 'mcversion':project.minecraft.version
+    }
+}
+
 reobfJar.dependsOn shadowJar
 
 reobf {
