--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath "com.github.asbyth:ForgeGradle:FG_2.1-SNAPSHOT"
+        classpath "com.github.debuggingss:ForgeGradle:FG_2.1-SNAPSHOT"
         classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
-        classpath "com.github.LXGaming:MixinGradle:0.6-SNAPSHOT"
+        classpath "com.github.debuggingss:MixinGradle:0.6-SNAPSHOT"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
