--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-forgeVersion=1.8.9-11.15.1.2318-1.8.9
-mcpVersion=stable_22
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=true
+essential.defaults.loom=0
+loom.platform=forge
